[package]
name = "apinae-daemon"
version = "0.1.11"
edition = "2021"
description = "An application for testing apis."
license = "Apache 2.0"
repository = "https://github.com/kjetilfjellheim/apinae"
readme = "README.md"
keywords = ["monitoring", "agent", "health", "system"]
authors = ["Kjetil Fjellheim <kjetil@forgottendonkey.net>"]
categories = ["testing", "api"]

[dependencies]
apinae-lib = { path = "../apinae-lib" }
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.45.1", features = ["full"] }
regex = "1.11.1"
actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
rustls = { version = "0.23.27", features = ["logging", "tls12"] }
rustls-pemfile = "2.2.0"
reqwest = { version = "0.12.18" }
log = "0.4.27"
env_logger = { version = "0.11.8"}

[dev-dependencies]
futures-util = "0.3"

[profile.release]
lto = true
