[package]
name = "apinae-ui"
version = "0.0.3"
description = "UI for Apinae"
edition = "2021"

[lib]
name = "apinae_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
apinae-lib = { path = "../../apinae-lib" }
tauri = { version = "2.2.5", features = ["devtools"] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tauri-plugin-dialog = "2.2.0"
tracing = "0.1.41"
tauri-plugin-devtools = "2.0.0"
