[package]
name = "apinae-ui"
version = "0.1.7"
description = "UI for Apinae"
edition = "2021"

[lib]
name = "apinae_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
apinae-lib = { path = "../../apinae-lib" }
tauri = { version = "2.5.1", features = ["devtools"] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-dialog = "2.2.1"
tauri-plugin = "2.2.0"
tracing = "0.1.41"
tauri-plugin-devtools = "2.0.0"
